project file updated

--- a/Music Genre Classification.ipynb
+++ b/Music Genre Classification.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Music Genre Classification.ipynb",
+      "name": "VJ Music Genre Classification final 2 final.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -20,13 +20,13 @@
         "id": "hT7u_tZts0iT"
       },
       "source": [
-        "# **Music Genre Classification**\n"
+        "# Music Genre Classification\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "16ITTBNL8nSC"
+        "id": "BD_Cbl_NN6Mt"
       },
       "source": [
         "Copyright @ 2020 **ABCOM Information Systems Pvt. Ltd.** All Rights Reserved.\n",
@@ -459,12 +459,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b0FORz1bYZUq"
+        "id": "pewGwbrduBuv"
       },
       "source": [
-        "result={1: 'metal',2: 'classical',3: 'rock', 4: 'disco',5: 'pop',6: 'blues',7: 'reggae',8: 'hiphop',9: 'country'}\n",
-        "pred=clf.predict([audio_feature])\n",
-        "result[int(pred)]"
+        "from collections import defaultdict\n",
+        "results=defaultdict(int)\n",
+        "i=1\n",
+        "for folder in os.listdir(\"/content/music-genre-master/Dataset/\"):\n",
+        "    results[i]=folder\n",
+        "    i+=1\n",
+        "pred_audio=clf.predict([audio_feature])\n",
+        "results[int(pred_audio)]"
       ],
       "execution_count": null,
       "outputs": []
@@ -484,7 +489,8 @@
         "id": "mi6sd3CJSZyt"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/abcom-mltutorials/music/master/bhambhole.mp3"
+        "# !wget https://raw.githubusercontent.com/abcom-mltutorials/music/master/instrumental.mp3\n",
+        "!wget https://raw.githubusercontent.com/abcom-mltutorials/music/master/bhatiyar.mp3"
       ],
       "execution_count": null,
       "outputs": []
@@ -495,7 +501,7 @@
         "id": "FB6UdbEtkIpM"
       },
       "source": [
-        "src = \"/content/bhambhole.mp3\"\n",
+        "src = \"/content/bhatiyar.mp3\"\n",
         "dst = \"test.wav\"\n",
         "\n",
         "# convert wav to mp3                                                            \n",
@@ -530,11 +536,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i71r8ey-stWO"
+        "id": "NVXemOAqxIzw"
       },
       "source": [
-        "pred=clf.predict([audio_feature])\n",
-        "result[int(pred)]"
+        "pred_audio=clf.predict([audio_feature])\n",
+        "results[int(pred_audio)-2]"
       ],
       "execution_count": null,
       "outputs": []
